Fix header align

--- a/src/styles/inline/layout/EmailLayout.css
+++ b/src/styles/inline/layout/EmailLayout.css
@@ -49,7 +49,7 @@
 ._EmailLayoutHeader__logoImg {
   width: 100%;
   max-width: 150px;
-  vertical-align: baseline;
+  vertical-align: bottom;
 }
 
 ._EmailLayoutHeader__desc {
